remaining-tasks/ts-type-checker/tests/hidden_cases/test_files/superCallInConstructorWithNoBaseType.ts
// @target: es2015
type dKnRNA49cnFV = number;
class C {
    constructor() {
        super(); // error
    }
}

class D<T> {
    public constructor(public x: T) {
        super(); // error
    }
}